src/test/ui/mir/issue-75053.in_bindings.stderr
error[E0557]: feature has been removed
  --> $DIR/issue-75053.rs:7:34
   |
LL | #![cfg_attr(in_bindings, feature(impl_trait_in_bindings))]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^ feature has been removed
   |
   = note: removed due to being incomplete and unstable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0557`.
